- For mentor spirits that do not allow the user to select from multiple bonuses, the entire bonus is now shown as regular text instead of it being cut off in a grayed-out dropdown box.
- Custom data directories can now implement a manifest folder with [langcode].txt files to serve as an explanation for the custom data. This explanation is also displayed in the Custom Data Directory selection. 
- Trust Fund can now be selected for non-advanced lifestyles.
- Skill pool tooltips no longer sometimes show the skill's category as its specialization.
- Spell and Complex Form pool tooltips are no longer combine the contribution of their linked attribute and their linked skill.
- Spells and Complex Forms with special damage amounts, targets, and/or ranges now have those translated properly when printing/exporting in a non-English language.
- In order to prevent users from thinking Chummer has locked up when it is still working, Chummer now shows a visible loading progress bar when it is loading in a character's UI elements or when it is saving a character.

Data Changes:
- Consolidated all German Data Changes custom data and all German-exclusive content of sourcebooks printed in English into a single German Data Changes c.ustom data folder.
- Individualized Alchemy, Disenchanting, Power, and Spellcasting focuses now properly apply their bonuses. Existing characters with these focuses will need to re-add them or reapply improvements to see any changes. Fixes #4340.
- Whisper of Bones now properly requires Necromancy.
- Injection Darts no longer display a weapon category selection screen and then crash Chummer. Fixes #4352.
- Smartlink from the Shadowrun 2050 ruleset now properly gives a +2 dicepool bonus when using smartguns.
- When creating spirit critters with forces not divisible by 3, the number of optional powers they get is now properly based on rounding the result of the division down instead of up. Fixes #4356.