@@ -1,1 +1,0 @@
-Aims to implement all Changes, that are present in the German Sourcebooks
